[package]
name = "fsr"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Scaffold Fullstack Rust + React monorepos from a GitHub template"
repository = "https://github.com/mozhiyun/fsr"
readme = "README.md"

[[bin]]
name = "fsr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
